Prevent search dialog overflow in mobile

--- a/app/_components/header/search/search.module.scss
+++ b/app/_components/header/search/search.module.scss
@@ -93,3 +93,8 @@
     cursor: default;
   }
 }
+
+.search-dialog-category {
+  min-width: 0;
+  flex-shrink: 1;
+}
